changed the Recource location outside the source folder for docker add docker build file and compose.yml